Tweak versioning of endpoints
* /api/v1/admin/... -> /admin/v1/...
* /api/v1/health -> /health
* Update openapi.yaml
* Update HTTP request examples
